fixed category button sizing on mobile

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -247,7 +247,7 @@ input:focus {
 @media screen and (min-width: 960px) and (max-width: 1279px) {
 
   #categories button {
-    font-size: 4rem;
+    font-size: 3.4rem;
   }
 
   #feed-title {
